examples/bench/bad/typing/generalize5.mlw

goal test : exists x:'a. x=1 
